[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spacy-to-naf"
version = "0.2.0"
description = "spaCy-to-NAF converter"
authors = [
    {name  = "Emiel van Miltenburg"},
    {name = "Marten Postma"},
    {name = "Sophie Arnoult"},
    {email = "s.i.arnoult@vu.nl"}
]
maintainers = [
    {name = "Sophie Arnoult"},
    {email = "s.i.arnoult@vu.nl"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License"
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["nafparserpy", "spacy"]
license = {text = "Apache License 2.0"}

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
repository = "https://github.com/cltl/Spacy_to_NAF"
changelog = "https://github.com/cltl/Spacy_to_NAF/blob/main/Changelog.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
